--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".test.TestReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.andro.analogclocktimer.ACTION_COMMAND" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
